<resources>
    <string name="app_name">Portfolio</string>
    <string name="title_activity_main">My App Portfolio</string>

    <string name="launcherActivityHeading">My Nanodegree Apps!</string>

    <string name="spotifyAppTitle">SPOTIFY STREAMER</string>
    <string name="scoresAppTitle">SCORES APP</string>
    <string name="libraryAppTitle">LIBRARY APP</string>
    <string name="biggerAppTitle">BUILD IT BIGGER</string>
    <string name="xyzReaderAppTitle">XYZ READER</string>
    <string name="capstoneAppTitle">CAPSTONE: MY OWN APP</string>
</resources>
