<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/title"
            android:text="@string/launcherActivityHeading"
            android:layout_margin="25dp"
            />

        <Button
            style="@style/CustomButton"
            android:id="@+id/spotifyAppButton"
            android:text="@string/spotifyAppTitle"
            android:layout_marginTop="15dp"
            />

        <Button
            style="@style/CustomButton"
            android:id="@+id/scoresAppButton"
            android:text="@string/scoresAppTitle"
            />

        <Button
            style="@style/CustomButton"
            android:id="@+id/libraryAppButton"
            android:text="@string/libraryAppTitle"
            />

        <Button
            style="@style/CustomButton"
            android:id="@+id/biggerAppButton"
            android:text="@string/biggerAppTitle"
            />

        <Button
            style="@style/CustomButton"
            android:id="@+id/xyzReaderAppButton"
            android:text="@string/xyzReaderAppTitle"
            />

        <Button
            style="@style/CustomButton"
            android:id="@+id/capstoneAppButton"
            android:text="@string/capstoneAppTitle"
            />

    </LinearLayout>
</ScrollView>